<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Campus</string>
    <string name="search">Search</string>
    <string name="tum_logo">TUM Logo</string>
    <string name="update">Update</string>
    <string name="loading">Loading …</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="app_short_description" translatable="false">TUM information platform - from students for students</string>
    <string name="dialog_show_calendar">Export successful.\nShow local calendar <i>TUM_CAMPUS_APP</i> on <i>Google Calendar App</i>?</string>
    <string name="export_to_google">Export to Google</string>
    <string name="export_to_google_error">An error occurred while exporting your calendar to Google Calendar.</string>
    <string name="calendarTimeZone" translatable="false">Germany/Munich</string>
    <string name="delete_from_google">Delete from Google</string>
    <string name="dialog_delete_calendar">Do you want to delete  the <i>TUM_CAMPUS_APP</i>  calendar from your device?</string>
    <string name="calendar_deleted_toast">Calender deleted successfully</string>
    <string name="calendar_not_existing_toast">No local calendar existing</string>
    <string name="semester_summer">Summer term</string>
    <string name="semester_winter">Winter term</string>
    <string name="calendar_filter_title">Change Filters</string>
    <string name="calendar_filter_canceled">Show Canceled Events</string>
    <string name="calendar_filter_hour_limit">Limit Shown Timespan</string>
    <string name="calendar_filter_hour_limit_min_title">From Hour</string>
    <string name="calendar_filter_hour_limit_max_title">To Hour</string>
    <string name="calendar_filter_hour_limit_error_message">Minimum hour must be below maximum hour!</string>
    <string name="no_map_available">No map available</string>
    <string name="search_rooms">Search rooms</string>
    <string name="error_accessing_tumonline_header">Error accessing TUMonline</string>
    <string name="error_accessing_tumonline_body">Please make sure your TUMonline access token has been activated and the corresponding rights are set.</string>
    <string name="error_no_access_token_setup_header">No TUMonline access token was set</string>
    <string name="error_no_access_token_setup_body">Please set your TUMonline access token in the <i>Settings</i> to access TUMonline features.</string>
    <string name="error_something_wrong">Sorry, something went wrong.</string>
    <string name="click_to_try_again"><b>Click here to retry.</b></string>
    <string name="error_access_token_already_set_generate_new">Your TUMonline access token is already set. If you generate a new token, the old one becomes useless.</string>
    <string name="error_invalid_tum_id">Your TUM ID is invalid</string>
    <string name="error_invalid_access_token">Your TUMonline access token is invalid.</string>
    <string name="error_access_token_could_not_be_generated">Your TUMonline access token could not be generated.</string>
    <string name="error_access_token_inactive">Your TUMonline access token is not enabled. Head to TUMonline to enable it.</string>
    <string name="error_no_internet_connection">No Internet connection</string>
    <string name="error_no_data_to_show">No data to show.</string>
    <string name="error_no_rights_to_access_function">Your TUMonline access token doesn’t have the rights to access this function.</string>
    <string name="error_request_limit_reached">You reached the request limit for TUMonline. Try again later.</string>
    <string name="error_access_token_limit_reached">Token limit reached. You have delete an access token in TUMonline before you can continue.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error_tum_online_unavailable">TUMonline is currently unavailable.</string>
    <string name="empty_string" translatable="false" />
    <string name="average_grade">Average grade</string>
    <string name="show_column_chart">Show Column Chart</string>
    <string name="show_pie_chart">Show Pie Chart</string>
    <string name="result_extra">Result:&#160;</string>
    <string name="semester">Semester</string>
    <string name="examiner">Examiner</string>
    <string name="mode">Mode</string>
    <string name="all_programs">All Grades</string>
    <string name="date">Date</string>
    <string name="credits" translatable="false">ECTS</string>
    <string name="no_grades">You don\'t have any grades yet.</string>
    <string name="lrz_id">TUM Identification</string>
    <string name="role">Role</string>
    <string name="role_summary">Your role at TUM. Either student, employee or guest.</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="guest">Guest</string>
    <string name="cards_settings">Cards</string>
    <string name="startpage">Startpage</string>
    <string name="notification">Notifications</string>
    <string name="extras">Extras</string>
    <string name="open_wizard">Open Startup-Wizard</string>
    <string name="open_wizard_detail">The Startup-Wizard helps you in order to set the basic preferences for accessing TUMonline services and the layout of this App.</string>
    <string name="account" translatable="false">Account</string>
    <string name="logout">Log out</string>
    <string name="logout_title">Disconnect from TUMonline</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_error_title">Logout failed</string>
    <string name="logout_try_again">Do you want to try again?</string>
    <string name="employee_mode">Employee Mode</string>
    <string name="employee_mode_info">Some unnecessary items like grades and tuition fees are hidden in this mode.</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_detail">Deletes all data which was downloaded by the TUM Campus App and stored on your device.</string>
    <string name="delete_cache_sure">Are you sure you want to delete all data?</string>
    <string name="success_clear_cache">Successfully cleared cache</string>
    <string name="services">Services</string>
    <string name="silence_phone">Silent Service</string>
    <string name="silence_phone_info">The device will be automatically put into silent mode during a lecture.</string>
    <string name="background_mode">Background Mode (Recommended)</string>
    <string name="background_info">Content will automatically be updated once per day if you’re in the Munich area.</string>
    <string name="mode_background_mode">Background Mode activation</string>
    <string name="always">Always</string>
    <string name="wifi_only">WiFi only</string>
    <string name="demo_mode">In-App-Tutorial</string>
    <string name="demo_info">Activates help mode for instruction on how to use this App.</string>
    <string name="about_tca">About the App</string>
    <string name="information">Information</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="facebook_link" translatable="false">https://m.facebook.com/TUMCampus</string>
    <string name="facebook_link_app" translatable="false">fb://facewebmodal/f?href=https://www.facebook.com/TUMCampus</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="github_contribute">Contribute on GitHub</string>
    <string name="github_link" translatable="false">https://github.com/TUM-Dev/Campus-Android</string>
    <string name="licences">Open-source licences</string>
    <string name="licences_summary">Legal notes to licences</string>
    <string name="not_connected_to_tumonline">Not connected</string>
    <string name="startup_wizard">Connect to TUMonline</string>
    <string name="welcome_msg">To setup TUMonline access, you need to provide your <b>TUM ID</b>.\n\nThe ID has the format <i>ga12abc</i>.</string>
    <string name="button_skip">Skip</string>
    <string name="button_next">Next</string>
    <string name="need_to_enable"><b>The TUMonline access token was successfully generated</b>\n\nPlease enable the token in TUMonline now via <i>Services/Token-Management</i> or follow the link in the email from TUMonline which you will receive shortly.\nMake sure the rights you want to gain in the app are set under <i>Specific Rights</i>.</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="set_silent_mode">If activated, the device will go into silent mode if a lecture appointment has been recognized.</string>
    <string name="set_background_mode">Activate or deactivate <i>Background Mode</i>. If activated, content will be fetched once per day to keep your TUM Campus App up to date.</string>
    <string name="goto_tumcampus">Go to TUM Campus App</string>
    <string name="no_link_existing">No link existing.</string>
    <string name="info_title">New information:</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="my_tum">My TUM</string>
    <string name="calendar">Calendar</string>
    <string name="my_lectures">My Lectures</string>
    <string name="my_grades">My Grades</string>
    <string name="chat_rooms">Chat rooms</string>
    <string name="tuition_fees">Tuition Fees</string>
    <string name="common_info">General Information</string>
    <string name="menues">Cafeterias</string>
    <string name="person_search">Person Search</string>
    <string name="roomfinder">Roomfinder</string>
    <string name="study_rooms">Study Rooms</string>
    <string name="opening_hours">Smart Mic</string>
    <string name="mvv">MVV</string>
    <string name="news">News</string>
    <string name="events" translatable="false">Events</string>
    <string name="barrier_free">Barrier-free Information</string>
    <string name="lectures_information">Lecture Information</string>
    <string name="lectures_appointments">Lecture Appointments</string>
    <string name="person_information">Person Information</string>
    <string name="tum">Technical university of Munich</string>
    <string name="setup">Setup</string>
    <string name="password">Password</string>
    <string name="data_backup">Data-Backup</string>
    <string name="data_backup_desc">For safety reasons, the data backup must be disabled to avoid that the TUM credentials are stored unencrypted on the Google servers.\nUnder ‘Backup &amp; restore’ > ‘Back up my data’ to disable.</string>
    <string name="disable_data_backup">Disable Data-Backup</string>
    <string name="pin_lock_rem"><b>Configuration failed!</b>\nDo you have a manually created wifi profile? We cannot overwrite it so please delete it!</string>
    <string name="password_gets_not_saved">TUM Campus App does not save the password, but Android WifiManager does.</string>
    <string name="transition_card" translatable="false">card_transition</string>
    <string name="fix_eduroam">Fix eduroam</string>
    <string name="eduroam_fix">Fix it now</string>
    <string name="eduroam_insecure_configuration">We have detected an insecure eduroam wifi configuration. You are subject to leaking information about you and your account.</string>
    <string name="delete_event_button">Delete</string>
    <string name="edit_event_button">Edit</string>
    <string name="event_canceled">Canceled</string>
    <string name="tumonline_login">Connect to TUMonline</string>
    <string name="card_login_title">Welcome to the TUM Campus App</string>
    <string name="card_login_body">Connect the app to TUMonline now to access your calendar, lectures and grades.</string>
    <string name="show_in_calendar">Show in Calendar</string>
</resources>