<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_space"
                android:orientation="vertical"
                android:transitionName="@string/transition_card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_space"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/lrz_id"
                    android:textColor="@color/tum_500" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lrz_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/wifi_lrz_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textCursorDrawable="@drawable/cursor_text_field_colorful" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_space"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/wifi_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/cursor_text_field_colorful" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_space"
                    android:text="@string/password_gets_not_saved"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/eduroam_config_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_space"
                    android:layout_marginBottom="@dimen/default_space"
                    android:drawableStart="@drawable/ic_help_red"
                    android:drawablePadding="@dimen/default_space"
                    android:text="@string/pin_lock_rem"
                    android:textColor="#FF0000"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_space"
                    android:layout_marginBottom="@dimen/small_space"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/data_backup"
                    android:textColor="@color/tum_500" />

                <TextView
                    android:id="@+id/text_with_link_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_backup_desc"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_space"
                    android:onClick="showDataBackupSettings"
                    android:text="@string/disable_data_backup"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/default_corner_radius" />

            </LinearLayout>

        </ScrollView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/buttonBar"
            android:background="@color/grey_200" />

        <LinearLayout
            android:id="@+id/buttonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingStart="@dimen/default_space"
            android:paddingTop="@dimen/small_space"
            android:paddingEnd="@dimen/default_space"
            android:paddingBottom="@dimen/small_space">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="onClickCancel"
                android:text="@android:string/cancel"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/default_corner_radius" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="onClickSetup"
                android:text="@string/setup"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/default_corner_radius" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
