<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/StandardCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cardTitle"
            style="@style/Text.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:text="@string/card_login_title"
            app:layout_constraintBottom_toTopOf="@id/cardBody"
            app:layout_constraintEnd_toStartOf="@id/cardMoreIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cardMoreIcon"
            style="@style/CardMoreIcon"
            app:layout_constraintBottom_toBottomOf="@id/cardTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardTitle" />

        <TextView
            android:id="@+id/cardBody"
            style="@style/Text.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:layout_marginBottom="@dimen/small_space"
            android:text="@string/card_login_body"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginBottom="@dimen/small_space"
            android:text="@string/tumonline_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="@dimen/default_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardBody" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>