<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StandardCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cardTitle"
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_action_network_wifi"
            android:drawablePadding="@dimen/default_space"
            android:text="@string/fix_eduroam"
            app:layout_constraintEnd_toStartOf="@id/cardMoreIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cardMoreIcon"
            style="@style/CardMoreIcon"
            app:layout_constraintBottom_toBottomOf="@id/cardTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardTitle" />

        <TextView
            android:id="@+id/eduroam_insecure_message"
            style="@style/CardBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginEnd="@dimen/default_space"
            android:text="@string/eduroam_insecure_configuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardTitle" />

        <TextView
            android:id="@+id/eduroam_errors"
            style="@style/CardBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginEnd="@dimen/default_space"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eduroam_insecure_message"
            tools:text="Errors"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eduroam_action_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginBottom="@dimen/small_space"
            android:text="@string/eduroam_fix"
            android:textAllCaps="false"
            android:textColor="@color/tum_500"
            app:cornerRadius="@dimen/default_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eduroam_errors" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>