<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_space"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/cancelButtonsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_space"
                    app:backgroundTint="@color/event_canceled"
                    app:srcCompat="@drawable/ic_action_cancel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_canceled"
                    android:textAllCaps="true"
                    android:textColor="@color/event_canceled"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:textAppearance="@android:style/TextAppearance.Large"
                tools:text="Title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="@dimen/icon_default"
                android:layout_height="@dimen/icon_default"
                android:src="@drawable/ic_outline_location_on_24px_light_blue" />

            <LinearLayout
                android:id="@+id/locationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space"
                android:orientation="vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginEnd="@dimen/default_space"
            android:layout_marginBottom="@dimen/small_space"
            android:drawableStart="@drawable/ic_outline_access_time_24px"
            android:drawablePadding="@dimen/default_space"
            android:textAppearance="@android:style/TextAppearance.Medium"
            tools:text="Date" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginEnd="@dimen/default_space"
            android:layout_marginBottom="@dimen/default_space"
            android:drawableStart="@drawable/ic_action_info_black"
            android:drawablePadding="@dimen/default_space"
            android:textAppearance="@android:style/TextAppearance.Medium"
            tools:text="Description" />

        <LinearLayout
            android:id="@+id/buttonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginEnd="@dimen/default_space"
            android:layout_marginBottom="@dimen/small_space"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_event_button"
                android:textAllCaps="false"
                android:textColor="@color/tum_500"
                android:theme="@style/AppTheme"
                app:cornerRadius="@dimen/default_corner_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_space"
                android:text="@string/edit_event_button"
                android:textAllCaps="false"
                android:textColor="@color/tum_500"
                android:theme="@style/AppTheme"
                app:cornerRadius="@dimen/default_corner_radius" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/showInCalendarButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showInCalendarButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space"
                android:layout_marginTop="@dimen/small_space"
                android:layout_marginEnd="@dimen/default_space"
                android:layout_marginBottom="@dimen/small_space"
                android:gravity="start|center_vertical"
                android:text="@string/show_in_calendar"
                android:textAllCaps="false"
                android:textColor="@color/tum_500"
                android:theme="@style/AppTheme"
                app:cornerRadius="@dimen/default_corner_radius" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>